[metadata]
name = pytracts
description = Library to define data contracts for JSON and build RESTful services with Webapp2 or Flask
version = 2.0.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/rmorlok/pytracts
author = Ryan Morlok
author_email = ryan.morlok@morlok.com
license = Apache 2.0
license_files = LICENSE
keywords = protocol json contract
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://github.com/rmorlok/pytracts
    Source = https://github.com/rmorlok/pytracts
    Tracker = https://github.com/rmorlok/pytracts/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    six
#    ez_setup
python_requires = >=2.7,!=3.0.*,!=3.1.*
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    screed = screed.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
